outputs/logs/expo-web.out.log
env: load .env
env: export EXPO_PUBLIC_SUPABASE_URL EXPO_PUBLIC_SUPABASE_ANON_KEY EXPO_PUBLIC_DEMO_CUSTOMER_EMAIL EXPO_PUBLIC_DEMO_CUSTOMER_PASSWORD
Starting project at C:\Users\HP\Desktop\Codex-Projects\InsureIT\apps\mobile-app
Starting Metro Bundler
Waiting on http://localhost:19006
Logs for your project will appear below.
Web node_modules\expo-router\entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web node_modules\expo-router\entry.js ▓▓░░░░░░░░░░░░░░ 16.0% ( 4/10)
Web node_modules\expo-router\entry.js ▓▓▓▓░░░░░░░░░░░░ 25.0% ( 5/10)
Web node_modules\expo-router\entry.js ▓▓▓▓▓▓▓░░░░░░░░░ 46.5% ( 69/181)
Web node_modules\expo-router\entry.js ▓▓▓▓▓▓▓░░░░░░░░░ 46.5% (166/392)
Web node_modules\expo-router\entry.js ▓▓▓▓▓▓▓░░░░░░░░░ 46.5% (353/527)
Web node_modules\expo-router\entry.js ▓▓▓▓▓▓▓▓▓▓░░░░░░ 68.1% (543/658)
Web node_modules\expo-router\entry.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 82.3% (743/819)
Web Bundled 28392ms node_modules\expo-router\entry.js (978 modules)
 LOG  [web] Logs will appear in the browser console
Web node_modules\expo-router\entry.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Web Bundled 281ms node_modules\expo-router\entry.js (1 module)
 LOG  [web] Logs will appear in the browser console
 ERROR  SyntaxError: C:\Users\HP\Desktop\Codex-Projects\InsureIT\apps\mobile-app\components\customer-dashboard\index.tsx: Unexpected token (237:2)

  235 |   return { background: palette.surface, wash: palette.blueSoft, washAlt: 'rgba(255,255,255,0.8)', border: palette.line, accent: palette.blue, button: palette.blue };
  236 | }
> 237 |   );
      |   ^
  238 | }
  239 |
  240 | export function ActionRequiredCard({ required, count, onUpload }: { required: boolean; count: number; onUpload: () => void }) {
    at constructor (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:365:19)
    at TypeScriptParserMixin.raise (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:6616:19)
    at TypeScriptParserMixin.unexpected (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:6636:16)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:11459:22)
    at TypeScriptParserMixin.parseExprAtom (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:4776:20)
    at TypeScriptParserMixin.parseExprSubscripts (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:11098:23)
    at TypeScriptParserMixin.parseUpdate (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:11083:21)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:11063:23)
    at TypeScriptParserMixin.parseMaybeUnary (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:9854:18)
    at TypeScriptParserMixin.parseMaybeUnaryOrPrivate (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10916:61)
    at TypeScriptParserMixin.parseExprOps (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10921:23)
    at TypeScriptParserMixin.parseMaybeConditional (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10898:23)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10848:21)
    at TypeScriptParserMixin.parseMaybeAssign (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:9803:20)
    at TypeScriptParserMixin.parseExpressionBase (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10801:23)
    at C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10797:39
    at TypeScriptParserMixin.allowInAnd (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:12438:16)
    at TypeScriptParserMixin.parseExpression (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10797:17)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:12912:23)
    at TypeScriptParserMixin.parseStatementContent (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:9525:18)
    at TypeScriptParserMixin.parseStatementLike (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:12784:17)
    at TypeScriptParserMixin.parseModuleItem (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:12761:17)
    at TypeScriptParserMixin.parseBlockOrModuleBlockBody (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:13333:36)
    at TypeScriptParserMixin.parseBlockBody (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:13326:10)
    at TypeScriptParserMixin.parseProgram (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:12639:10)
    at TypeScriptParserMixin.parseTopLevel (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:12629:25)
    at TypeScriptParserMixin.parse (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:14505:25)
    at TypeScriptParserMixin.parse (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:10143:18)
    at parse (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\parser\lib\index.js:14518:26)
    at parser (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\core\lib\transformation\normalize-file.js:51:37)
    at normalizeFile.next (<anonymous>)
    at run (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\gensync\index.js:251:28)
    at sync (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\gensync\index.js:89:14)
    at stopHiding - secret - don't use this - v1 (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\core\lib\errors\rewrite-stack-trace.js:47:12)
    at Object.transformSync (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@babel\core\lib\transform.js:40:76)
    at parseWithBabel (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro-config\build\transformSync.js:75:18)
    at transformSync (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro-config\build\transformSync.js:54:16)
    at Object.transform (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro-config\build\babel-transformer.js:127:58)
    at transformJSWithBabel (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro-config\build\transform-worker\metro-transform-worker.js:468:47)
    at Object.transform (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro-config\build\transform-worker\metro-transform-worker.js:583:12)
    at Object.transform (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro-config\build\transform-worker\transform-worker.js:178:19)
    at transformFile (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro\node_modules\metro\src\DeltaBundler\Worker.flow.js:67:36)
    at Object.transform (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\@expo\metro\node_modules\metro\src\DeltaBundler\Worker.flow.js:42:10)
    at execFunction (C:\Users\HP\Desktop\Codex-Projects\InsureIT\node_modules\jest-worker\build\workers\processChild.js:149:17)
